--- a/_posts/2020-06-01-episodio-1.md
+++ b/_posts/2020-06-01-episodio-1.md
@@ -2,6 +2,5 @@
 layout: post
 title: Episodio 1
 audio: 51638197
+description: Os presentamos el primer episodio de "Droids And Druids", donde introducimos el podcast y hablamos, como no podía ser de otra manera, de droides y druidas.
 ---
-
-Bienvenidos al primer episodio de "Droids And Druids", donde presentamos el podcast y hablamos, como no podía ser de otra manera, de droides y druidas.
