--- a/_posts/2020-07-08-episodio-2.md
+++ b/_posts/2020-07-08-episodio-2.md
@@ -2,6 +2,6 @@
 layout: post
 title: Episodio 2
 audio: 53457428
-description: "Club de lectura: Bienvenidos a Welcome, de Laura Fernández"
+description: "Para el segundo epiosdio, os traemos un club de lectura: Bienvenidos a Welcome, de Laura Fernández"
 ---
 
