Add different categories for posts and pages

--- a/_posts/2020-07-08-episodio-2.md
+++ b/_posts/2020-07-08-episodio-2.md
@@ -5,5 +5,5 @@ audio: 53457428
 date: 2020-07-25T17:31:10.694Z
 description: "Para el segundo episodio, os traemos un club de lectura:
   Bienvenidos a Welcome, de Laura Fernández"
+categories: podcast
 ---
-\
