--- a/_posts/2020-08-02-episodio-3.md
+++ b/_posts/2020-08-02-episodio-3.md
@@ -7,8 +7,8 @@ description: El episodio que traemos este mes de agosto se titula "Maestros y
   Padawans", donde como en cada episodio de temática os presentamos las
   secciones Análisis Parálisis, Random Connections y Mundo Comic. ¡Ah! Y algún
   anuncio sorpresa...
+categories: podcast
 ---
-
 
 ## Anuncio del club de lectura
 
