Use same convention in post titles

--- a/_posts/podcast/2020-06-01-episodio-1.md
+++ b/_posts/podcast/2020-06-01-episodio-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Episodio 1
+title: Episodio 1 - Droides y Druidas
 audio: 51638197
 description: Os presentamos el primer episodio de "Droids And Druids", donde introducimos el podcast y hablamos, como no podía ser de otra manera, de droides y druidas.
 categories: podcast
