--- a/_posts/podcast/2020-07-08-episodio-2.md
+++ b/_posts/podcast/2020-07-08-episodio-2.md
@@ -1,9 +1,8 @@
 ---
 layout: post
-title: Episodio 2
+title: Episodio 2 - Bienvenidos a Welcome
 audio: 53457428
 date: 2020-07-25T17:31:10.694Z
-description: "Para el segundo episodio, os traemos un club de lectura:
-  Bienvenidos a Welcome, de Laura Fernández"
+description: "Para el segundo episodio, os traemos un club de lectura: Bienvenidos a Welcome, de Laura Fernández"
 categories: podcast
 ---
