--- a/_posts/podcast/2020-08-02-episodio-3.md
+++ b/_posts/podcast/2020-08-02-episodio-3.md
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: Episodio 3
+layout: post
+title: Episodio 3 - Maestros y Padawans
 audio: "54683843"
 date: 2020-08-02T19:46:34.566Z
 description: El episodio que traemos este mes de agosto se titula "Maestros y
